--- a/css/App.module.css
+++ b/css/App.module.css
@@ -39,6 +39,7 @@
 }
 
 .blog > p {
+  text-indent: 30px;
   font-size: 18px;
   line-height: 2.2rem;
 }
@@ -47,6 +48,19 @@
 }
 .blog > h2 {
   margin-bottom: 2rem;
+}
+.blog > ul > li {
+  margin-bottom: 1rem;
+}
+
+.blog > pre {
+  background-color: black;
+  border-radius: 12px;
+}
+.blog > p > code {
+  background-color: black;
+  border-radius: 4px;
+  padding: 2px 6px;
 }
 .tableWrapper {
   display: flex;
